# Simple-Launcher-Installer

./: Cargo.toml  README.md
src/: main.rs
