[package]
name = "game-launcher-installer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "game-launcher-installer"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
dirs = "5.0"
regex = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
